fixed icons on mobile menu

--- a/app/assets/stylesheets/main.sass
+++ b/app/assets/stylesheets/main.sass
@@ -663,6 +663,8 @@ main
           svg
             width: 100%
             height: 100%
+            height: 24px
+            display: block
             path
               fill: #656d72
               opacity: 1
